--- a/SurRound/View/Post+Story/NewPost/Base.lproj/NewPost.storyboard
+++ b/SurRound/View/Post+Story/NewPost/Base.lproj/NewPost.storyboard
@@ -93,10 +93,10 @@
                     </subviews>
                     <color key="backgroundColor" red="0.54740279213387344" green="0.60929281799807822" blue="0.66666668653488159" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
-                        <constraint firstItem="D66-Gt-45K" firstAttribute="bottom" secondItem="3wH-5s-8AT" secondAttribute="bottom" id="ELZ-IK-B8c"/>
-                        <constraint firstItem="3wH-5s-8AT" firstAttribute="top" secondItem="0Ju-eX-Dlf" secondAttribute="top" id="YpA-Y1-WzD"/>
-                        <constraint firstItem="3wH-5s-8AT" firstAttribute="leading" secondItem="D66-Gt-45K" secondAttribute="leading" id="mks-D6-ECm"/>
-                        <constraint firstItem="D66-Gt-45K" firstAttribute="trailing" secondItem="3wH-5s-8AT" secondAttribute="trailing" id="oeU-Lq-0Fd"/>
+                        <constraint firstItem="3wH-5s-8AT" firstAttribute="leading" secondItem="D66-Gt-45K" secondAttribute="leading" id="8gP-5B-3R7"/>
+                        <constraint firstItem="3wH-5s-8AT" firstAttribute="bottom" secondItem="D66-Gt-45K" secondAttribute="bottom" id="V95-V7-jvy"/>
+                        <constraint firstItem="3wH-5s-8AT" firstAttribute="trailing" secondItem="D66-Gt-45K" secondAttribute="trailing" id="j8E-ax-2RO"/>
+                        <constraint firstItem="3wH-5s-8AT" firstAttribute="top" secondItem="0Ju-eX-Dlf" secondAttribute="top" id="tU9-2R-BQp"/>
                     </constraints>
                     <viewLayoutGuide key="safeArea" id="D66-Gt-45K"/>
                 </view>
