--- a/SurRound/View/Profile/Base.lproj/Profile.storyboard
+++ b/SurRound/View/Profile/Base.lproj/Profile.storyboard
@@ -15,9 +15,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="AiL-xM-Yqn">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="AiL-xM-Yqn">
+                                <rect key="frame" x="0.0" y="88" width="375" height="690"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <connections>
                                     <outlet property="dataSource" destination="y53-h9-qyE" id="Tfp-l0-tiT"/>
@@ -110,6 +109,12 @@
                             </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="AiL-xM-Yqn" firstAttribute="leading" secondItem="c7X-7G-7QB" secondAttribute="leading" id="nbu-tK-y6v"/>
+                            <constraint firstAttribute="trailing" secondItem="AiL-xM-Yqn" secondAttribute="trailing" id="nhu-9d-SgZ"/>
+                            <constraint firstItem="c7X-7G-7QB" firstAttribute="bottom" secondItem="AiL-xM-Yqn" secondAttribute="bottom" id="o8r-oH-xVg"/>
+                            <constraint firstItem="AiL-xM-Yqn" firstAttribute="top" secondItem="c7X-7G-7QB" secondAttribute="top" id="pDj-55-aF4"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="c7X-7G-7QB"/>
                     </view>
                     <navigationItem key="navigationItem" id="EWQ-ts-iie">
@@ -123,11 +128,86 @@
                         <outlet property="profileHeaderView" destination="vE3-qb-kVw" id="cTy-fV-EBy"/>
                         <outlet property="selectionView" destination="21M-oF-47K" id="vOF-Bq-p8p"/>
                         <outlet property="tableView" destination="AiL-xM-Yqn" id="bmG-04-Azw"/>
+                        <segue destination="QyJ-Y9-H3x" kind="show" identifier="UserTableViewController" id="WCy-nB-F6N"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="45m-IU-ni7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1008.8" y="-303.69458128078821"/>
+        </scene>
+        <!--User Table View Controller-->
+        <scene sceneID="cLj-4Z-NxD">
+            <objects>
+                <tableViewController id="QyJ-Y9-H3x" customClass="UserTableViewController" customModule="SurRound" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="M7x-Vk-SXS">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <inset key="scrollIndicatorInsets" minX="0.0" minY="16" maxX="0.0" maxY="0.0"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="UserListTableViewCell" rowHeight="85" id="ehb-hA-Aa7" customClass="UserListTableViewCell" customModule="SurRound" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="85"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ehb-hA-Aa7" id="Vmb-b1-BWc">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="85"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icons_Avatar" translatesAutoresizingMaskIntoConstraints="NO" id="97Q-SD-axk">
+                                            <rect key="frame" x="16" y="0.0" width="48" height="48"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="48" id="4N6-wb-w57"/>
+                                                <constraint firstAttribute="width" secondItem="97Q-SD-axk" secondAttribute="height" id="r9z-MU-ml1"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dWV-Im-97h" customClass="SRMediumTextLabel" customModule="SurRound" customModuleProvider="target">
+                                            <rect key="frame" x="80" y="16" width="179" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="252" verticalHuggingPriority="252" horizontalCompressionResistancePriority="752" verticalCompressionResistancePriority="752" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6L2-wp-lIf" customClass="ShadedButton" customModule="SurRound" customModuleProvider="target">
+                                            <rect key="frame" x="267" y="11.666666666666664" width="44" height="30"/>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <state key="normal" title="Follow">
+                                                <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </state>
+                                        </button>
+                                        <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="detailDisclosure" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B5v-dV-jhi">
+                                            <rect key="frame" x="335" y="14.666666666666664" width="24" height="24"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="24" id="a3M-8s-Ik3"/>
+                                                <constraint firstAttribute="width" secondItem="B5v-dV-jhi" secondAttribute="height" id="sLS-ge-fGV"/>
+                                            </constraints>
+                                            <state key="normal">
+                                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </state>
+                                        </button>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="B5v-dV-jhi" secondAttribute="trailing" constant="16" id="6IZ-In-5IR"/>
+                                        <constraint firstItem="B5v-dV-jhi" firstAttribute="leading" secondItem="6L2-wp-lIf" secondAttribute="trailing" constant="24" id="I9k-dc-8PM"/>
+                                        <constraint firstItem="6L2-wp-lIf" firstAttribute="centerY" secondItem="dWV-Im-97h" secondAttribute="centerY" id="J3C-q7-Nnz"/>
+                                        <constraint firstItem="97Q-SD-axk" firstAttribute="leading" secondItem="Vmb-b1-BWc" secondAttribute="leading" constant="16" id="OJz-fi-u8z"/>
+                                        <constraint firstItem="dWV-Im-97h" firstAttribute="leading" secondItem="97Q-SD-axk" secondAttribute="trailing" constant="16" id="S74-n3-vSW"/>
+                                        <constraint firstItem="97Q-SD-axk" firstAttribute="top" secondItem="Vmb-b1-BWc" secondAttribute="top" id="ScS-eO-4nP"/>
+                                        <constraint firstItem="6L2-wp-lIf" firstAttribute="leading" secondItem="dWV-Im-97h" secondAttribute="trailing" constant="8" id="Wub-cO-x7b"/>
+                                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="97Q-SD-axk" secondAttribute="bottom" constant="16" id="qlc-cO-zR7"/>
+                                        <constraint firstItem="dWV-Im-97h" firstAttribute="top" secondItem="97Q-SD-axk" secondAttribute="top" constant="16" id="rj5-jz-s7N"/>
+                                        <constraint firstItem="B5v-dV-jhi" firstAttribute="centerY" secondItem="6L2-wp-lIf" secondAttribute="centerY" id="wZX-TD-LiD"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="QyJ-Y9-H3x" id="Cer-eW-SBq"/>
+                            <outlet property="delegate" destination="QyJ-Y9-H3x" id="zi2-CL-gLm"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="YqA-HL-uCj"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xp9-wf-LM0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1815.2" y="-303.69458128078821"/>
         </scene>
         <!--Colored Nav Controller-->
         <scene sceneID="i3I-rP-mpp">
